Fix listening to overlay config updates (i.e. isLocked) and setting the handler visible/not visible

--- a/css/rdmty.css
+++ b/css/rdmty.css
@@ -1,11 +1,15 @@
 html {
-    background-image: url(../images/handle.png);
-    background-position: bottom right;
-    background-repeat: no-repeat;
     box-sizing: border-box;
     height: 100%;
     overflow: hidden;
 }
+
+.resizable {
+    background-image: url(../images/handle.png);
+    background-position: bottom right;
+    background-repeat: no-repeat;
+}
+
 #container {
     font-family: Tahoma;
     font-size: 12px;
